...
                      children: [
                        Container(
                          child: RoundedLoadingButton(
                            width: 130,
                            color: globals.themeColours[mapIndex],
                            successColor: Colors.green,
                            child: Text('Add to route',
                                style: TextStyle(
                                    color: globals.textColours[mapIndex])),
                            controller: _btnController,
                            onPressed: () async {
                              var data = await DatabaseService(
                                  uid: _auth.getCurrent()?.uid);
...
                          ),
                        ),
                        RoundedLoadingButton(
                          width: 130,
                          color: globals.themeColours[mapIndex],
                          successColor: Colors.green,
                          child: Text('Add to favourite places',
                              style: TextStyle(
                                  color: globals.textColours[mapIndex])),
                          controller: _secondBtnController,
                          onPressed: () async {
                            var data = await DatabaseService(
                              uid: _auth.getCurrent()?.uid,
...
                  Container(
                    child: Center(
                      child: RoundedLoadingButton(
                        width: 170,
                        color: globals.themeColours[mapIndex],
                        successColor: Colors.green,
                        child: Text('Add to favourite routes',
                            style: TextStyle(
                                color: globals.textColours[mapIndex])),
                        controller: _thirdBtnController,
                        onPressed: () async {
                          var data = await DatabaseService(
                              uid: _auth.getCurrent()?.uid);
...
          context: context,
          builder: (ctx) => AlertDialog(
            title: Text('Location Invalid'),
            content: Text('Please search a location that is in london'),
            actions: <Widget>[
              TextButton(
                child: Text('Okay'),
                onPressed: () {
                  Navigator.of(ctx).pop();
                },
              )
            ],
          ),
...
            ),
            ValueListenableBuilder(
                valueListenable: globals.show_attractions,
                builder: (BuildContext context, bool value, Widget? child) {
                  return value
                      ? Text(
                          "London Attractions",
                          style: GoogleFonts.heebo(
                              textStyle: headline4,
                              fontWeight: FontWeight.w600,
                              color: globals.titleColours[mapIndex],
                              letterSpacing: 1.3),
                        )
...
      children: <Widget>[
        const SizedBox(
          width: 20.0,
        ),
        Flexible(
          child: TextField(
              key: Key("Number of bikes field"),
              keyboardType: TextInputType.number,
              controller: noOfBikesController,
              decoration: const InputDecoration(hintText: "No. bikes")),
        ),
        const SizedBox(
          width: 20.0,
        ),
        Flexible(
          child: TextField(
              key: Key("Number of spaces field"),
              keyboardType: TextInputType.number,
              controller: noOfEmptySpacesController,
              decoration: const InputDecoration(hintText: "Empty spaces")),
        ),
      ],
    );
...
      context: context,
      builder: (context) => AlertDialog(
            title: Text("Confirm"),
            content: tempWidget(),
            actions: [
              TextButton(
                child: Text("Submit"),
                onPressed: () {
                  var noOfBike_str = noOfBikesController.text;
                  var noOfEmptySpaces_str = noOfEmptySpacesController.text;
                  int noOfBike_int = 0;
                  int noOfEmptySpaces_int = 0;
                  try {
...
        context: context,
        actions: [
          IconsOutlineButton(
            onPressed: () {
              Navigator.pop(context);
            },
            text: 'No',
            iconData: Icons.cancel_outlined,
            textStyle: TextStyle(color: Colors.grey),
            iconColor: Colors.grey,
          ),
          IconsButton(

            onPressed: () {
              cancelJourney();
              Navigator.pop(context);
            },

            text: 'Yes',
            iconData: Icons.check_outlined,
            color: Colors.red,
            textStyle: TextStyle(color: Colors.white),
            iconColor: Colors.white,
          ),
        ]);
...
