...
              body:
                  "This app has been designed to organise and navigate your way around the city",
              image: Image.asset('assets/images/getStarted/bikepointdemo.jpeg'),
              decoration: pagedecor(),
            ),
            PageViewModel(
              title: "Search",
              bodyWidget: SingleChildScrollView(
                child: Column(
                  children: [
                    Center(
                      child: Image.asset(
                        'assets/images/firstdemo.png',
...
